# diskann

./: .gitignore  Cargo.toml  NOTICE  README.md  project.code-workspace  readme.md  rust-toolchain.toml
.cargo/: config.toml
api/memory_insert_query/: Cargo.toml
api/memory_insert_query/output/: output  output2.data
api_memory_insert_query/: Cargo.toml  relations.html
api_memory_insert_query/src/: disk_ann_store.rs  diskann_store.rs  lib.rs  main.rs  mem_ann_store.rs
api_memory_insert_query/test/input/: saved_vector_file  saved_vector_file.data
cmd_drivers/build_and_insert_delete_memory_index/: Cargo.toml
cmd_drivers/build_and_insert_delete_memory_index/src/: main.rs
cmd_drivers/build_and_insert_memory_index/: Cargo.toml
cmd_drivers/build_disk_index/: Cargo.toml
cmd_drivers/build_memory_index/: Cargo.toml
cmd_drivers/convert_f32_to_bf16/: Cargo.toml
cmd_drivers/load_and_insert_memory_index/: Cargo.toml
cmd_drivers/search_memory_index/: Cargo.toml
diskann/: Cargo.toml
diskann/benches/: distance_bench.rs  kmeans_bench.rs  neighbor_bench.rs
diskann/src/: lib.rs
logger/: Cargo.toml  build.rs
logger/src/: error_logger.rs  indexlog.proto  lib.rs  log_error.rs  message_handler.rs  trace_logger.rs
platform/: Cargo.toml
platform/src/: file_handle.rs  file_io.rs  io_completion_port.rs  lib.rs  perf.rs
vector/: Cargo.toml  build.rs  distance.c
vector/src/: distance.rs  distance_test.rs  half.rs  l2_float_distance.rs  lib.rs  metric.rs  test_util.rs  utils.rs
vector_base64/: Cargo.toml
vector_base64/src/: main.rs
(+85 files in other folders)
