[package]
name = "memory_insert_query"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diskann = { path = "../../diskann" }
logger = { path = "../../logger" }
vector = { path = "../../vector" }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"